frappe/public/less/desk.less
/* ... */
.input-area input[type=checkbox] {
	margin-left: -20px;
}

.checkbox label {
	padding-left: 0px;
}

.checkbox input[type=checkbox] {
	margin-right: 5px;
	margin-left: 0px;
	position: relative;
	height: 12px;
}

// custom font awesome checkbox
input[type="checkbox"] {
	position: relative;
	left: -999999px;

	&:before {
		position: absolute;
		font-family: 'FontAwesome';
		content: '\f096';
		visibility: visible;
		font-style: normal;
		font-weight: normal;
		font-variant: normal;
		text-transform: none;
		line-height: 14px;
		display: inline-block;
		font-size: 14px;
		color: @text-extra-muted;
		.transition(150ms color);
		left: 999999px;
	}

	&:focus:before {
		color: @text-muted;
	}

	&:checked:before {
		content: '\f14a';
		font-size: 13px;
		color: @checkbox-color;
	}

	&:focus {
		outline: none;
	}
}

// Will not be required after commonifying lists with empty state
.multiselect-empty-state{
	min-height: 300px;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100%;
}

// mozilla doesn't support
// pseudo elements on checkbox
@-moz-document url-prefix() {
	input[type="checkbox"] {
		visibility: visible;
		left: 0;
	}
}

@supports (-moz-appearance: none) {
	input[type="checkbox"] {
		visibility: visible;
		left: 0;
	}
}

// edge doesn't support pseudo elements on checkbox
//Microsoft Edge Browser 12+ (All)
@supports (-ms-ime-align:auto) {
	input[type="checkbox"] {
		 visibility: visible;
		 left: 0;
	}
}

// color picker
.color-picker {
	position: relative;
	z-index: 999;

	.color-picker-pallete {
		border-radius: 4px;
		box-shadow: 0 4px 12px rgba(0,0,0,.15);
		background: #fff;
		border: 1px solid @border-color;
		width: 290px;
		height: 106px;
		padding-top: 10px;
		padding-left: 5px;
		position: absolute;
		top: 0;
		left: 0;

		&:after,
		&:before {
			border: solid transparent;
			content: " ";
			height: 0;
			width: 0;
			pointer-events: none;
			position: absolute;
			bottom: 100%;
			left: 30px;
		}
		&:after {
			border-color: rgba(255, 255, 255, 0);
			border-bottom-color: #fff;
			border-width: 8px;
			margin-left: -8px;
		}
		&:before {
			border-color: rgba(221, 221, 221, 0);
			border-bottom-color: @border-color;
			border-width: 9px;
			margin-left: -9px;
		}
	}
	.color-box {
		cursor: pointer;
		display: inline-block;
		width: 20px;
		height: 20px;
		margin: -2px 0 0 3px;
		border: 1px solid rgba(0,0,0, 0.25);

	}
}

// Slides
.slides-wrapper {
	&:focus {
		outline: none;
	}
	.fa-circle {
		font-size: 10px;
		margin: 0px 2px;
		&.active {
			color: #5e64ff;
		}
		&.link {
			cursor: pointer;
		}
	}
	.slide-wrapper {
		&:focus {
			outline: none;
		}
	}
	.form {
		margin-top: 30px;
		.form-layout {
			margin-top: 0px;
			margin-bottom: 0px;
		}
		.form-section {
			padding: 0px 7px;
			border: none;
		}
	}
	.add-more {
		margin-bottom: 30px;
	}
	.lead {
		margin-top: 20px;
	}
	.success-state {
		margin-bottom: 20px;
	}
	.next-steps-links {
		.title {
			text-transform: uppercase;
			color: #8D99A6;
			font-size: 11px;
		}

	}
	.btn-primary {
		font-weight: bold;
	}
	.footer {
		margin-top: 15px;
		padding: 0px 7px;

		.btn:not(:last-child) {
			margin-right: 3px;
		}

		a.make-btn.disabled {
			background-color: #b1bdca;
			color: #fff;
			border-color: #b1bdca;
		}
	}
}

// User Progress Dialog
.user-progress-dialog {
	.slides-progress {
		margin-top: 15px;
	}

	.done-state {
		.check-container {
			font-size: 64px;
			margin: 40px;
		}

		.title {
			font-weight: normal;
		}

		.help-links {

			a {
				margin: 0px 10px;
			}
		}
	}

}

/* broken image styling */

img.no-image {
	position: relative;
	height: 100%;
	width: 100%;
}

.img-background() {
	content: " ";
	display: block;
	position: absolute;
	left: 0;
	height: calc(100%);
	width: 100%;
	background-color: @light-bg;
}

.img-foreground() {
	content: "\f1c5";
	display: block;
	font-style: normal;
	font-family: FontAwesome;
	font-size: 32px;
	color: @text-extra-muted;

	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	left: 0;
	width: 100%;
	text-align: center;
}

img.no-image:before {
	.img-background();
}

img.no-image:after {
	.img-foreground();
}

img.img-loading:before {
	.img-background();
}

img.img-loading:after {
	.img-foreground();
	font-family: 'Octicons';
	content: "\f00b";
}

